bugfix: creating librarian crashed the app, fixed it by wrapping these actions in try catch statement so that it only is executed correctly when needed

--- a/frontend/src/css/Filterpanel.css
+++ b/frontend/src/css/Filterpanel.css
@@ -1,5 +1,6 @@
 .filter-flex-container {
   display: flex;
+  align-items: flex-start; /* Adjust the alignment as needed */
 }
 
 .filter-form-group {
@@ -10,4 +11,24 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+}
+
+/* Adjust the height of the dropdown menu */
+.css-1pahdxg-control {
+  min-height: 38px;
+}
+
+/* Adjust the height of the dropdown options */
+.css-1okebmr-indicatorSeparator {
+  height: 38px;
+}
+
+.css-1pahdxg-menu {
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+.css-1pahdxg-menu div {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
 }
